--- a/FlashFiles/MainWindow.xaml
+++ b/FlashFiles/MainWindow.xaml
@@ -2,11 +2,12 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:local="clr-namespace:FlashFiles"
-        xmlns:converters="clr-namespace:FlashFiles.Converters"
+        xmlns:converters="clr-namespace:FlashFiles.Converters"          
         Title="FlashFiles - File Synchronization Tool" 
         Height="{Binding WindowHeight, Mode=TwoWay}" 
         Width="{Binding WindowWidth, Mode=TwoWay}"
         WindowState="{Binding WindowState, Mode=TwoWay}"
+        Icon="pack://application:,,,/FlashFiles.ico"
         MinHeight="650" MinWidth="800"
         Background="{StaticResource BackgroundBrush}"
         WindowStartupLocation="CenterScreen">
